# Preparation_GS2F_seminar

./: .gitignore  CONTRIBUTORS.md  README.md  pyproject.toml  setup.cfg
notebooks/: Linear_data_relationship_fitting.ipynb  Motif_scanning.ipynb  Non_linear_data_fit.ipynb  README.md  numpy_matplotlib_tutorial.ipynb  pandas_seaborn_scipy_tutorial.ipynb  sklearn_statsmodels_tutorial.ipynb
resources/: Installable_code_base.md  MountFolderServer.md  Pip_and_Conda.md  Python_environment_management.md  Reading_list.md  Setup_work_environment.md  Terminal_basics.md  github_basics.md  models.py.md  pip_installable_code_base.md
src/prep_package/: __init__.py  example_functions.py  plotting_functions.py
src/prep_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
